Add a github action step to prevent drift in the generated CLI reference

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,5 +73,8 @@ jobs:
           enable-cache: 'true'
           devbox-version: ${{ env.DEVBOX_VERSION }}
 
+      - name: Check for drift in the generated CLI reference
+        run: make cli-reference-drift
+
       - name: Build documentation
         run: make docs
