--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,6 +75,7 @@ jobs:
 
       - name: Check for drift in the generated CLI reference
         run: make cli-reference-drift
+        shell: bash
 
       - name: Build documentation
         run: make docs
