--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,5 +77,9 @@ jobs:
         run: make cli-reference-drift
         shell: bash
 
+      - name: Check for drift in the generated configuration reference
+        run: make config-reference-drift
+        shell: bash
+
       - name: Build documentation
         run: make docs
