--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,8 +6,8 @@
 version: 2
 
 builds:
-  - id: cog
-    binary: cog
+  - id: grafanactl
+    binary: grafanactl
     main: ./cmd/cli
 
     ldflags:
@@ -22,8 +22,8 @@ builds:
       - darwin
 
 archives:
-  - id: cog
-    builds: [cog]
+  - id: grafanactl
+    builds: [grafanactl]
     format: tar.gz
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
@@ -42,7 +42,7 @@ checksum:
   name_template: "{{ .ProjectName }}_checksums.txt"
 
 snapshot:
-  version_template: "{{ incpatch .Version }}-next"
+  version_template: "{{ incpatch .Version }}-next-{{ .ShortCommit }}"
 
 changelog:
   use: github
