--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -14,6 +14,7 @@ linters:
     - exhaustruct
     - funlen
     - gocognit
+    - goconst
     - godox
     - lll
     - mnd
@@ -45,7 +46,3 @@ formatters:
     - goimports
   exclusions:
     generated: lax
-    paths:
-      - third_party$
-      - builtin$
-      - examples$
