Add make targets for env var reference tasks

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,12 +73,8 @@ jobs:
           enable-cache: 'true'
           devbox-version: ${{ env.DEVBOX_VERSION }}
 
-      - name: Check for drift in the generated CLI reference
-        run: make cli-reference-drift
-        shell: bash
-
-      - name: Check for drift in the generated configuration reference
-        run: make config-reference-drift
+      - name: Check for drift in the generated documentation references
+        run: make cli-reference
         shell: bash
 
       - name: Build documentation
