--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,13 @@ plugins:
   - search
 
 markdown_extensions:
+  - attr_list
+  - md_in_html
   - admonition
   - pymdownx.magiclink
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.tabbed:
       alternate_style: true
       slugify: !!python/object/apply:pymdownx.slugs.slugify
