Add version information when building locally
What

This commit updates local build pipeline to populate version information
and expands the version data to cover commit and build date.

Why

To make it easier to debug locally-built versions.

Signed-off-by: Igor Suleymanov <igor.suleymanov@grafana.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,6 +12,8 @@ builds:
 
     ldflags:
       - -X main.version={{ .Version }}
+      - -X main.commit={{ .Commit }}
+      - -X main.date={{ .Date }}
 
     env:
       - CGO_ENABLED=0
