Reduce permissions needed

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,9 @@ concurrency:
   group: "releases"
   cancel-in-progress: false
 
+permissions:
+  contents: read # to push new branches
+
 jobs:
   release:
     name: Release
