--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "github-actions"
     directory: "/"
+    labels: ["type/dependencies"]
     schedule:
       interval: "weekly"
     groups:
@@ -11,6 +12,7 @@ updates:
 
   - package-ecosystem: "gomod"
     directory: "/"
+    labels: ["type/dependencies"]
     schedule:
       interval: "weekly"
     groups:
